mecha: sdcard mount and symlink in device init like it is for tuna
Change-Id: I64ead52720a5700b57d25dde5f3e3a0cb9d1a57b

--- a/prebuilt/root/init.mecha.rc
+++ b/prebuilt/root/init.mecha.rc
@@ -12,6 +12,11 @@ on early-fs
 #on early-init
     device mtd@misc 0460 radio diag
 
+    export EXTERNAL_STORAGE /mnt/sdcard
+    mkdir /mnt/sdcard 0000 system system
+    # for backwards compatibility
+    symlink /mnt/sdcard /sdcard
+
 on init
     # double check the perms and set owner
     chown root root /devlog
